crates/picea/tests/ui/math_legacy_api/generic_math_types.rs
use picea::math::{point::Point, segment::Segment, vector::Vector};

fn main() {
    let _point = Point::<f64>::new(0.0, 0.0);
    let _vector = Vector::<f64>::new(1.0, 0.0);
    let _segment = Segment::<f64>::new(Point::new(0.0, 0.0), Point::new(1.0, 0.0));
}
